--- a/data.yaml
+++ b/data.yaml
@@ -1,5 +1,5 @@
 title: '美味しい料理と日本酒の飲み会'
-date: '2月19日(金) 19:30'
+date: '2010-2-19 19:30'
 bar_name: 'でり坊 五反田店'
 bar_url: 'http://www.delibo.com/gotanda/'
 budget: '4,000'
