でり坊 五反田店が閉店した

--- a/data.yaml.sample
+++ b/data.yaml.sample
@@ -1,15 +1,15 @@
-title: '美味しい料理と日本酒の飲み会'
+title: 'ボヤキ飲み会'
 date: '2010-2-19 19:30'
-bar_name: 'でり坊 五反田店'
-bar_url: 'http://www.delibo.com/gotanda/'
-budget: '4,000'
+bar_name: '立ち呑み処 ボヤキ'
+bar_url: 'http://r.tabelog.com/tokyo/A1311/A131101/13105840/'
+budget: '2,500'
 host: 'koic'
 contact_number: '090-9999-9999'
-contact_email: 'nomarebu@nomare.bu'
+contact_email: 'nomarebu@example.com'
 entries:
-  - 'igaiga555'
-  - 'beakmark'
-  - 'chiba777'
+  - 'chibamem'
+  - 'ryhmrt'
+  - 'kunitoo'
 rendezvous_at_time: '19:20'
-rendezvous_point: '五反田駅の改札前'
+rendezvous_point: '御徒町駅南口の改札前'
 deadline_for_cancel: '当日16:00'
