Boyaki has gone

--- a/data.yaml.sample
+++ b/data.yaml.sample
@@ -1,15 +1,22 @@
-title: 'ボヤキ飲み会'
-date: '2010-2-19 19:30'
-bar_name: '立ち呑み処 ボヤキ'
-bar_url: 'http://r.tabelog.com/tokyo/A1311/A131101/13105840/'
-budget: '2,500'
+title: 'CROSS をしのぶ会 w/ ursm'
+date: '2016-2-29 19:00'
+bar_name: '肉のテーマパーク まる豚'
+bar_url: 'http://tabelog.com/tokyo/A1310/A131002/13086497/'
+budget: '2,000'
 host: 'koic'
 contact_number: '090-9999-9999'
 contact_email: 'nomarebu@example.com'
 entries:
-  - 'chibamem'
-  - 'ryhmrt'
+  - 'flada-auxv'
+  - 'hibariya'
+  - 'hrysd'
+  - 'kakutani'
+  - 'koic'
   - 'kunitoo'
-rendezvous_at_time: '19:20'
-rendezvous_point: '御徒町駅南口の改札前'
+  - 'mhirata'
+  - 'takkanm'
+  - 'tanaka51'
+  - 'ursm'
+rendezvous_at_time: '19:00'
+rendezvous_point: '神田駅北口の改札前'
 deadline_for_cancel: '当日16:00'
